2008-04-23  Maciej Stachowiak  <mjs@apple.com>

        Rubber stamped by Geoff.
        
        - add OldInterpreterExecState class and use it in dead code
        
        This will allow removing things from the real ExecState class
        without having to figure out how to remove all this code without
        getting a perf regression.

        * kjs/nodes.cpp:
        (KJS::ExpressionNode::evaluateToNumber):
        (KJS::ExpressionNode::evaluateToBoolean):
        (KJS::ExpressionNode::evaluateToInt32):
        (KJS::ExpressionNode::evaluateToUInt32):
        (KJS::Node::setErrorCompletion):
        (KJS::Node::throwError):
        (KJS::Node::throwUndefinedVariableError):
        (KJS::Node::handleException):
        (KJS::Node::rethrowException):
        (KJS::BreakpointCheckStatement::execute):
        (KJS::BreakpointCheckStatement::optimizeVariableAccess):
        (KJS::NullNode::evaluate):
        (KJS::FalseNode::evaluate):
        (KJS::TrueNode::evaluate):
        (KJS::NumberNode::evaluate):
        (KJS::NumberNode::evaluateToNumber):
        (KJS::NumberNode::evaluateToBoolean):
        (KJS::NumberNode::evaluateToInt32):
        (KJS::NumberNode::evaluateToUInt32):
        (KJS::ImmediateNumberNode::evaluate):
        (KJS::ImmediateNumberNode::evaluateToInt32):
        (KJS::ImmediateNumberNode::evaluateToUInt32):
        (KJS::StringNode::evaluate):
        (KJS::StringNode::evaluateToNumber):
        (KJS::StringNode::evaluateToBoolean):
        (KJS::RegExpNode::evaluate):
        (KJS::ThisNode::evaluate):
        (KJS::ResolveNode::inlineEvaluate):
        (KJS::ResolveNode::evaluate):
        (KJS::ResolveNode::evaluateToNumber):
        (KJS::ResolveNode::evaluateToBoolean):
        (KJS::ResolveNode::evaluateToInt32):
        (KJS::ResolveNode::evaluateToUInt32):
        (KJS::getSymbolTableEntry):
        (KJS::ResolveNode::optimizeVariableAccess):
        (KJS::LocalVarAccessNode::inlineEvaluate):